# antidrift-skills

./: README.md  pyproject.toml  registry.json
.github/workflows/: build-registry.yml  publish.yml
audit/: skill.ir.yaml
brains/: SKILL.md  skill.ir.yaml
changelog/: skill.ir.yaml
decision/: skill.ir.yaml
followup/: skill.ir.yaml
icp/: skill.ir.yaml
inbox/: skill.ir.yaml
incident/: skill.ir.yaml
legal/: SKILL.md  skill.ir.yaml
pentest-prep/: skill.ir.yaml
prep/: skill.ir.yaml
recap/: skill.ir.yaml
review/: skill.ir.yaml
search/: skill.ir.yaml
secrets/: skill.ir.yaml
spec/: skill.ir.yaml
src/antidrift_skills/: __init__.py  cli.py
standards/: skill.ir.yaml
status/: skill.ir.yaml
threat-model/: skill.ir.yaml
tps/: skill.ir.yaml
twins/: skill.ir.yaml
voc/: skill.ir.yaml
write/: skill.ir.yaml
