[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antidrift-skills"
version = "0.2.1"
description = "Community skill registry for Claude Code brains."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Probeo", email = "hello@probeo.io" }]
keywords = ["claude-code", "claude", "skills", "company-brain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
antidrift-skills = "antidrift_skills.cli:main"

[project.urls]
Homepage = "https://antidrift.io"
Repository = "https://github.com/probeo-io/antidrift"
Issues = "https://github.com/probeo-io/antidrift/issues"
